--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "clerkie-backend-challenge",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "nodeapp.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon nodeapp.js"
   },
   "author": "",
   "license": "ISC",
